src/scci/C86CtlWrapper.h

	__declspec(dllexport) DWORD __cdecl  GimicInitialize();
	__declspec(dllexport) DWORD __cdecl  GimicDeinitialize();
	__declspec(dllexport) DWORD __cdecl  GimicGetNumberOfChip();
	__declspec(dllexport) DWORD __cdecl  GimicGetModule(DWORD moduleIndex, DWORD chipType);
	__declspec(dllexport) DWORD __cdecl  GimicSetClock(DWORD moduleIndex, DWORD clock);
	__declspec(dllexport) void __cdecl  GimicSetRegister(DWORD moduleIndex, DWORD addr, DWORD data);
	__declspec(dllexport) void __cdecl  GimicSetRegisterDirect(DWORD moduleIndex, DWORD addr, DWORD data);
	__declspec(dllexport) DWORD __cdecl  GimicGetWrittenRegisterData(DWORD moduleIndex, DWORD addr);
	__declspec(dllexport) void __cdecl  GimicSetSSGVolume(DWORD moduleIndex, UCHAR volume);